[gd_scene load_steps=30 format=3 uid="uid://de75pb8ek3ngu"]

[ext_resource type="Texture2D" uid="uid://c7wf41tjn45me" path="res://assets/useful shit/conveyor.png" id="1_hhedt"]
[ext_resource type="Script" uid="uid://dc21we2q5q57w" path="res://scripts/esteira.gd" id="1_ls025"]
[ext_resource type="Texture2D" uid="uid://oh24vusubdof" path="res://assets/useful shit/conveyors/conveyor-0-0.png" id="3_kegw6"]
[ext_resource type="Texture2D" uid="uid://b6v8xskfef8ax" path="res://assets/useful shit/conveyors/conveyor-0-1.png" id="4_uf5y4"]
[ext_resource type="Texture2D" uid="uid://df5v7t36veb3u" path="res://assets/useful shit/conveyors/conveyor-0-2.png" id="5_dtplc"]
[ext_resource type="Texture2D" uid="uid://db6g7fsamghu5" path="res://assets/useful shit/conveyors/conveyor-0-3.png" id="6_k4aao"]
[ext_resource type="Texture2D" uid="uid://bvcvhb17uqslg" path="res://assets/useful shit/conveyors/conveyor-4-0.png" id="7_dq3x7"]
[ext_resource type="Texture2D" uid="uid://wllcqgm6dq41" path="res://assets/useful shit/conveyors/conveyor-4-1.png" id="8_popdw"]
[ext_resource type="Texture2D" uid="uid://br4qe4uxaaipg" path="res://assets/useful shit/conveyors/conveyor-4-2.png" id="9_tk2ss"]
[ext_resource type="Texture2D" uid="uid://bb5q22hg0nod1" path="res://assets/useful shit/conveyors/conveyor-4-3.png" id="10_gcdqb"]
[ext_resource type="Texture2D" uid="uid://byluuilxrjru4" path="res://assets/useful shit/conveyors/conveyor-3-0.png" id="11_72wtl"]
[ext_resource type="Texture2D" uid="uid://bmer5oocruc5k" path="res://assets/useful shit/conveyors/conveyor-3-1.png" id="12_72geg"]
[ext_resource type="Texture2D" uid="uid://dgx8kv37r82xq" path="res://assets/useful shit/conveyors/conveyor-3-2.png" id="13_6n6ht"]
[ext_resource type="Texture2D" uid="uid://dm272t7vsg6ue" path="res://assets/useful shit/conveyors/conveyor-3-3.png" id="14_y2srf"]
[ext_resource type="Texture2D" uid="uid://8j2dcxeyg72f" path="res://assets/useful shit/conveyors/conveyor-2-0.png" id="15_ejuyh"]
[ext_resource type="Texture2D" uid="uid://bfrwx3alhqwjq" path="res://assets/useful shit/conveyors/conveyor-2-1.png" id="16_us0pv"]
[ext_resource type="Texture2D" uid="uid://c2222a3ogqebs" path="res://assets/useful shit/conveyors/conveyor-2-2.png" id="17_6insl"]
[ext_resource type="Texture2D" uid="uid://ct7dgn05nf1c7" path="res://assets/useful shit/conveyors/conveyor-2-3.png" id="18_tvl3u"]
[ext_resource type="Texture2D" uid="uid://ca5nxhkd5km4d" path="res://assets/useful shit/conveyors/conveyor-1-0.png" id="19_rusqd"]
[ext_resource type="Texture2D" uid="uid://cpgyq82qyavki" path="res://assets/useful shit/conveyors/conveyor-1-1.png" id="20_yumyq"]
[ext_resource type="Texture2D" uid="uid://c6ly6fybrkc7j" path="res://assets/useful shit/conveyors/conveyor-1-2.png" id="21_06hgp"]
[ext_resource type="Texture2D" uid="uid://c5iaf4xtxc5wp" path="res://assets/useful shit/conveyors/conveyor-1-3.png" id="22_ebfen"]
[ext_resource type="Texture2D" uid="uid://b7u2kcbcu02c5" path="res://assets/useful shit/place-arrow.png" id="23_uf5y4"]
[ext_resource type="Texture2D" uid="uid://cb2peq1ioiict" path="res://item-sand.png" id="24_avdq0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ltxd1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kegw6")
}, {
"duration": 1.0,
"texture": ExtResource("4_uf5y4")
}, {
"duration": 1.0,
"texture": ExtResource("5_dtplc")
}, {
"duration": 1.0,
"texture": ExtResource("6_k4aao")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_2kasd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_dq3x7")
}, {
"duration": 1.0,
"texture": ExtResource("8_popdw")
}, {
"duration": 1.0,
"texture": ExtResource("9_tk2ss")
}, {
"duration": 1.0,
"texture": ExtResource("10_gcdqb")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_aa170"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_rusqd")
}, {
"duration": 1.0,
"texture": ExtResource("20_yumyq")
}, {
"duration": 1.0,
"texture": ExtResource("21_06hgp")
}, {
"duration": 1.0,
"texture": ExtResource("22_ebfen")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_onpw7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_ejuyh")
}, {
"duration": 1.0,
"texture": ExtResource("16_us0pv")
}, {
"duration": 1.0,
"texture": ExtResource("17_6insl")
}, {
"duration": 1.0,
"texture": ExtResource("18_tvl3u")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_3e0nq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_72wtl")
}, {
"duration": 1.0,
"texture": ExtResource("12_72geg")
}, {
"duration": 1.0,
"texture": ExtResource("13_6n6ht")
}, {
"duration": 1.0,
"texture": ExtResource("14_y2srf")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Esteira" type="Node2D" node_paths=PackedStringArray("up_right", "up_left", "down_right", "down_left", "left_down", "left_up", "right_down", "right_up", "left_up_down", "left_down_right", "left_down_up", "left_up_right", "right_down_left", "right_up_left", "right_down_up", "right_up_down", "left_up_down_right", "right_up_down_left", "right_left_up_down", "right_left_down_up", "convey")]
script = ExtResource("1_ls025")
up_right = NodePath("EsteiraPadrão/ESTEIRA1/Up-Right")
up_left = NodePath("EsteiraPadrão/ESTEIRA1/Up-Left")
down_right = NodePath("EsteiraPadrão/ESTEIRA1/Down-Right")
down_left = NodePath("EsteiraPadrão/ESTEIRA1/Down-Left")
left_down = NodePath("EsteiraPadrão/ESTEIRA1/Left-Down")
left_up = NodePath("EsteiraPadrão/ESTEIRA1/Left-Up")
right_down = NodePath("EsteiraPadrão/ESTEIRA1/Right-Down")
right_up = NodePath("EsteiraPadrão/ESTEIRA1/Right-Up")
left_up_down = NodePath("EsteiraPadrão/ESTEIRA3/LeftUp-Down")
left_down_right = NodePath("EsteiraPadrão/ESTEIRA3/LeftDown-Right")
left_down_up = NodePath("EsteiraPadrão/ESTEIRA3/LeftDown-Up")
left_up_right = NodePath("EsteiraPadrão/ESTEIRA3/LeftUp-Right")
right_down_left = NodePath("EsteiraPadrão/ESTEIRA3/RightDown-Left")
right_up_left = NodePath("EsteiraPadrão/ESTEIRA3/RightUp-Left")
right_down_up = NodePath("EsteiraPadrão/ESTEIRA3/RightDown-Up")
right_up_down = NodePath("EsteiraPadrão/ESTEIRA3/RightUp-Down")
left_up_down_right = NodePath("EsteiraPadrão/ESTEIRA2/LeftUpDown-Right")
right_up_down_left = NodePath("EsteiraPadrão/ESTEIRA2/RightUpDown-Left")
right_left_up_down = NodePath("EsteiraPadrão/ESTEIRA2/RightLeftUp-Down")
right_left_down_up = NodePath("EsteiraPadrão/ESTEIRA2/RightLeftDown-Up")
convey = NodePath("EsteiraPadrão/CONVEY")

[node name="Tempo_para_passar" type="Timer" parent="."]

[node name="Conveyor" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(-16, -16)
texture = ExtResource("1_hhedt")
centered = false

[node name="conveyor0" type="AnimatedSprite2D" parent="."]
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_ltxd1")
frame = 3
frame_progress = 1.0
centered = false

[node name="Place-arrow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 0.666667, 1)
z_index = -1
position = Vector2(-1, 0)
rotation = 1.5708
texture = ExtResource("23_uf5y4")

[node name="VeioDe-VaiPara" type="Node" parent="."]

[node name="Junction" type="Node2D" parent="."]

[node name="EsteiraPadrão" type="Node2D" parent="."]

[node name="CONVEY" type="AnimatedSprite2D" parent="EsteiraPadrão"]
visible = false
sprite_frames = SubResource("SpriteFrames_2kasd")
frame_progress = 0.83302

[node name="ESTEIRA1" type="Node2D" parent="EsteiraPadrão"]

[node name="Up-Right" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA1"]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_aa170")
frame_progress = 0.243025
centered = false

[node name="Down-Right" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA1"]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_aa170")
frame_progress = 0.68968
centered = false
flip_v = true

[node name="Up-Left" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA1"]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_aa170")
frame_progress = 0.205781
centered = false
flip_h = true

[node name="Down-Left" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA1"]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_aa170")
frame_progress = 0.961758
centered = false
flip_h = true
flip_v = true

[node name="Left-Down" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA1"]
visible = false
position = Vector2(-16, 16)
rotation = 4.71239
sprite_frames = SubResource("SpriteFrames_aa170")
frame_progress = 0.531936
centered = false
flip_h = true

[node name="Left-Up" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA1"]
visible = false
position = Vector2(16, -16)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_aa170")
frame_progress = 0.460956
centered = false
flip_h = true
flip_v = true

[node name="Right-Down" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA1"]
visible = false
position = Vector2(16, -16)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_aa170")
frame_progress = 0.77893
centered = false

[node name="Right-Up" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA1"]
visible = false
position = Vector2(16, -16)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_aa170")
frame_progress = 0.717948
centered = false
flip_h = true

[node name="ESTEIRA3" type="Node2D" parent="EsteiraPadrão"]

[node name="LeftDown-Right" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA3"]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_onpw7")
frame_progress = 0.789191
centered = false

[node name="LeftUp-Down" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA3"]
visible = false
position = Vector2(16, -16)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_onpw7")
frame_progress = 0.881894
centered = false

[node name="LeftDown-Up" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA3"]
visible = false
position = Vector2(-16, 16)
rotation = -1.5708
sprite_frames = SubResource("SpriteFrames_onpw7")
frame_progress = 0.969962
centered = false
flip_v = true

[node name="LeftUp-Right" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA3"]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_onpw7")
frame_progress = 0.797382
centered = false
flip_v = true

[node name="RightDown-Left" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA3"]
visible = false
position = Vector2(16, 16)
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_onpw7")
frame_progress = 0.226578
centered = false
flip_v = true

[node name="RightUp-Left" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA3"]
visible = false
position = Vector2(16, 16)
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_onpw7")
frame_progress = 0.651742
centered = false

[node name="RightDown-Up" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA3"]
visible = false
position = Vector2(-16, 16)
rotation = -1.5708
sprite_frames = SubResource("SpriteFrames_onpw7")
frame_progress = 0.715766
centered = false

[node name="RightUp-Down" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA3"]
visible = false
position = Vector2(16, -16)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_onpw7")
frame_progress = 0.926869
centered = false
flip_v = true

[node name="ESTEIRA2" type="Node2D" parent="EsteiraPadrão"]

[node name="LeftUpDown-Right" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA2"]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_3e0nq")
frame_progress = 0.937519
centered = false

[node name="RightUpDown-Left" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA2"]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_3e0nq")
frame_progress = 0.0381516
centered = false

[node name="RightLeftUp-Down" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA2"]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_3e0nq")
frame_progress = 0.931019
centered = false

[node name="RightLeftDown-Up" type="AnimatedSprite2D" parent="EsteiraPadrão/ESTEIRA2"]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_3e0nq")
frame_progress = 0.970916
centered = false

[node name="Label" type="Label" parent="."]
offset_left = -42.0
offset_top = 15.0
offset_right = 51.0
offset_bottom = 38.0
text = "aaaaaaaaaa"

[node name="Item-sand" type="Sprite2D" parent="."]
position = Vector2(-16, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("24_avdq0")
